--- a/src/App.css
+++ b/src/App.css
@@ -45,3 +45,21 @@
 .blue {
   color: blue;
 }
+
+.Sumo-Card {
+  display: grid;
+  /* flex-direction: column; */
+  text-align: center;
+  background-color: sandybrown;
+  width: 150px;
+  height: 150px;
+  margin: 15px;
+  margin-left: 200px;
+  border-radius: 1em;
+  box-shadow: 10px 5px 5px rgb(206, 148, 106);
+  /* padding: 0; */
+}
+
+.Sumo-Info {
+  font-family: cursive;
+}
